--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "@vuepress/plugin-register-components": "^2.0.0-beta.60",
-    "vuepress": "^2.0.0-beta.60"
+    "vuepress": "^2.0.0-beta.60",
+    "vuepress-plugin-copy-code2": "^2.0.0-beta.157"
+  },
+  "dependencies": {
+    "vuepress-plugin-remove-html-extension": "^0.1.0"
   }
 }
