--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vuepress/plugin-docsearch": "^2.0.0-beta.60",
     "@vuepress/plugin-register-components": "^2.0.0-beta.60",
     "vuepress": "^2.0.0-beta.60",
     "vuepress-plugin-copy-code2": "^2.0.0-beta.157"
